2007-10-15  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-icon-factory.[ch]:
        * libnautilus-private/nautilus-icon-info.[ch]:
	Move over icon size util functions to nautilus-icon-info

        * libnautilus-private/nautilus-icon-container.c:
        * libnautilus-private/nautilus-lib-self-check-functions.h:
        * src/file-manager/fm-list-model.c:
        * src/nautilus-sidebar-title.c:
	Update to new names

2007-10-15  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-icon-container.c:
        * libnautilus-private/nautilus-icon-factory.h:
	Remove NAUTILUS_ICON_SIZE_THUMBNAIL define as this is
	really dynamic.

2007-10-15  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.c:
	Actually handle thumbnail size prefs
	
2007-10-15  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.c:
	Handle thumbnail size prefs
	Handle all sorts of icon changes and emit CHANGED on
	files in this case.

        * libnautilus-private/nautilus-directory-private.h:
        * libnautilus-private/nautilus-directory.c:
        * libnautilus-private/nautilus-icon-container.c:
        * libnautilus-private/nautilus-icon-info.c:
        * libnautilus-private/nautilus-icon-info.h:
        * src/file-manager/fm-directory-view.c:
        * src/file-manager/fm-list-view.c:
        * src/file-manager/fm-properties-window.c:
        * src/file-manager/fm-tree-model.c:
        * src/file-manager/fm-tree-model.h:
        * src/file-manager/fm-tree-view.c:
        * src/nautilus-bookmarks-window.c:
        * src/nautilus-sidebar-title.c:
        * src/nautilus-window-bookmarks.c:
        * src/nautilus-window.c:
	Remove use of icon factory icons_changed signal, using instead
	the file CHANGED signal.

2007-10-15  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-file.c (nautilus_file_get_all_attributes):
	Add thumbnail to all attributes
